--- a/test/bids/datacite.yml
+++ b/test/bids/datacite.yml
@@ -4,13 +4,12 @@ authors:
   - firstname: Carl
     lastname: Wernicke
 title: The mother of all experiments
-description: Example description.
+description: fgezrrt
 keywords:
-  - Neuroscience
-  - Keyword2
-  - Keyword3
+  - zera
+  - fertzer
 license:
-  name: Creative Commons CC0 1.0 Public Domain Dedication
+  name: Creative Commons Zero v1.0 Universal Public Domain Dedication
   url: https://creativecommons.org/publicdomain/zero/1.0/
 funding:
   - National Institute of Neuroscience Grant F378236MFH1
