--- a/tests/bids/datacite.yml
+++ b/tests/bids/datacite.yml
@@ -4,7 +4,7 @@ authors:
   - firstname: Carl
     lastname: Wernicke
 title: The mother of all experiments
-description: gtjeklmrtjkelpm
+description: tzerze
 keywords:
   - foo
   - bar
