--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ provides = bids2cite
 
 [options.entry_points]
 console_scripts =
-    bids2cite = bids2cite.bids2cite:main
+    bids2cite = bids2cite.bids2cite:bids2cite
 
 [options]
 tests_require = pytest
@@ -78,5 +78,4 @@ exclude=
     tests/*
     _version.py
     versioneer.py
-    # setup.py
 max-complexity = 10
