--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,7 +33,7 @@ repos:
           name: isort (python)
 
 
-    # -   repo: https://github.com/pre-commit/mirrors-mypy
-        # rev: 'v0.971'
-        # hooks:
-        # -   id: mypy
+    -   repo: https://github.com/pre-commit/mirrors-mypy
+        rev: 'v0.971'
+        hooks:
+        -   id: mypy
