--- a/setup.cfg
+++ b/setup.cfg
@@ -29,8 +29,19 @@ console_scripts =
 tests_require = pytest
 test_suite = pytest
 zip_safe = False
+packages_dir = bids2cite
 packages = find:
 include_package_data = True
+install_requires =
+    rich
+    ruamel.yaml
+    black
+    requests
+    isort
+    crossref-commons
+
+[options.packages.find]
+where=bids2cite
 
 [options.extras_require]
 doc =
@@ -50,6 +61,7 @@ style =
     pre-commit
     sourcery
     mypy
+    types-requests
 test =
     pytest >=6.2.5
     pytest-cov
