allow to choose author from list

--- a/setup.cfg
+++ b/setup.cfg
@@ -38,6 +38,7 @@ install_requires =
     requests
     isort
     crossref-commons
+    pandas
 
 [options.extras_require]
 doc =
@@ -88,3 +89,6 @@ exclude=
     _version.py
     versioneer.py
 max-complexity = 10
+per-file-ignores =
+    # imported but unused
+    __init__.py: D104
