--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,12 +26,10 @@ repos:
       hooks:
           - id: flynt
 
-    - repo: https://github.com/pycqa/isort
-      rev: 5.10.1
+    - repo: https://github.com/asottile/reorder_python_imports
+      rev: "v3.8.2"
       hooks:
-        - id: isort
-          name: isort (python)
-
+          - id: reorder-python-imports
 
     -   repo: https://github.com/pre-commit/mirrors-mypy
         rev: 'v0.971'
