[DATALAD] Recorded changes

--- a/setup.cfg
+++ b/setup.cfg
@@ -74,7 +74,7 @@ dev =
 VCS = git
 style = pep440
 versionfile_source = bids2cite/_version.py
-tag_prefix =
+tag_prefix = v
 
 [flake8]
 max-line-length = 110
