--- a/.github/workflows/test_and_coverage.yml
+++ b/.github/workflows/test_and_coverage.yml
@@ -31,7 +31,7 @@ jobs:
         pip install .[test]
 
     - name: Run tests and generate coverage report
-      run: pytest --cov bids2cite --cov-report=xml
+      run: python -m pytest --cov-report=xml
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
