--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,6 @@
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
+
 repos:
     - repo: https://github.com/pre-commit/pre-commit-hooks
       rev: "v4.3.0"
@@ -8,18 +9,18 @@ repos:
           - id: check-yaml
           - id: end-of-file-fixer
           - id: check-json
+          - id: debug-statements
 
     - repo: https://github.com/psf/black
       rev: "22.10.0"
       hooks:
           - id: black
 
-    -   repo: https://github.com/pycqa/flake8
-        rev: "5.0.4"
-        hooks:
-        -   id: flake8
-            exclude: tests_.*.py|version.*.py|setup.py # ignore tests and versioneer related code
-
+    - repo: https://github.com/pycqa/flake8
+      rev: "5.0.4"
+      hooks:
+      -   id: flake8
+          exclude: tests_.*.py|version.*.py|setup.py # ignore tests and versioneer related code
 
     - repo: https://github.com/ikamensh/flynt/
       rev: "0.76"
@@ -30,8 +31,23 @@ repos:
       rev: "v3.8.4"
       hooks:
           - id: reorder-python-imports
+            args: [--py38-plus, --add-import, 'from __future__ import annotations']
+
+    -   repo: https://github.com/asottile/setup-cfg-fmt
+        rev: v2.0.0
+        hooks:
+        -   id: setup-cfg-fmt
 
     -   repo: https://github.com/pre-commit/mirrors-mypy
         rev: 'v0.982'
         hooks:
         -   id: mypy
+            additional_dependencies: [types-all]
+            files: bids2cite
+            args: ["--config-file", "setup.cfg"]
+
+    -   repo: https://github.com/asottile/pyupgrade
+        rev: v3.1.0
+        hooks:
+        -   id: pyupgrade
+            args: [--py38-plus]
