--- a/setup.cfg
+++ b/setup.cfg
@@ -1,73 +1,79 @@
 [metadata]
 name = bids2cite
+description = create a citation file for a BIDS dataset
+long_description = file: README.md
+long_description_content_type = text/markdown
 url = https://github.com/Remi-Gau/bids2cite
-download_url = https://github.com/Remi-Gau/bids2cite
 author = Remi Gau
 maintainer = Remi Gau
 maintainer_email = remi.gau@gmail.com
+license = LGPL-3.0
+license_file = LICENSE
+platforms = OS Independent
 classifiers =
     Development Status :: 3 - Alpha
     Intended Audience :: Science/Research
     License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
     Programming Language :: Python
     Programming Language :: Python :: 3
-license = LGPL-3.0
-description = create a citation file for a BIDS dataset
+    Programming Language :: Python :: 3 :: Only
+download_url = https://github.com/Remi-Gau/bids2cite
 keywords =
     BIDS
     datacite
-long_description = file:README.md
-long_description_content_type = text/markdown; charset=UTF-8
-platforms = OS Independent
 provides = bids2cite
+
+[options]
+packages = find:
+install_requires =
+    black
+    crossref-commons
+    isort
+    pandas
+    requests
+    rich
+    ruamel.yaml
+python_requires = >=3.8
+include_package_data = True
+test_suite = pytest
+tests_require = pytest
+zip_safe = False
+
+[options.packages.find]
+exclude =
+    tests*
 
 [options.entry_points]
 console_scripts =
     bids2cite = bids2cite.bids2cite:bids2cite
 
-[options]
-tests_require = pytest
-test_suite = pytest
-zip_safe = False
-packages = find:
-include_package_data = True
-install_requires =
-    rich
-    ruamel.yaml
-    black
-    requests
-    isort
-    crossref-commons
-    pandas
-
 [options.extras_require]
-doc =
-    sphinx >=2.0
-    sphinx-argparse
-    sphinx_rtd_theme
-    sphinx-argparse
-    sphinx-copybutton
-    myst-parser
-    rstcheck
-docs =
-    %(doc)s
-style =
-    flake8 >=3.7
-    flake8-docstrings >=1.5
-    black >=21
-    pre-commit
-    sourcery
-    mypy
-    types-requests
-test =
-    pytest >=6.2.5
-    pytest-cov
-    coverage
-tests =
-    %(test)s
 dev =
     %(doc)s
     %(style)s
+    %(test)s
+doc =
+    myst-parser
+    rstcheck
+    sphinx>=2.0
+    sphinx-argparse
+    sphinx-argparse
+    sphinx-copybutton
+    sphinx-rtd-theme
+docs =
+    %(doc)s
+style =
+    black>=21
+    flake8>=3.7
+    flake8-docstrings>=1.5
+    mypy
+    pre-commit
+    sourcery
+    types-requests
+test =
+    pytest>=6.2.5
+    pytest-cov
+tests =
     %(test)s
 
 [versioneer]
@@ -81,7 +87,7 @@ max-line-length = 110
 count = True
 show-source = True
 statistics = True
-exclude=
+exclude =
     *build
     .git
     __pycache__
@@ -90,5 +96,40 @@ exclude=
     versioneer.py
 max-complexity = 10
 per-file-ignores =
-    # imported but unused
     __init__.py: D104
+
+[mypy]
+check_untyped_defs = true
+disallow_any_generics = true
+disallow_incomplete_defs = true
+disallow_untyped_defs = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+
+[mypy-bids2cite._version]
+ignore_errors = True
+
+[mypy-rich.*]
+ignore_missing_imports = True
+
+[mypy-ruamel.*]
+ignore_missing_imports = True
+
+[mypy-pandas.*]
+ignore_missing_imports = True
+
+[mypy-crossref_commons.*]
+ignore_missing_imports = True
+
+[tool:pytest]
+addopts = --cov bids2cite -ra -vv
+
+[coverage:run]
+branch = True
+omit = *_version.py
+
+[coverage:report]
+show_missing = True
+skip_covered = True
+omit = *_version.py
