change name function CLI

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,7 +45,7 @@ exclude =
 
 [options.entry_points]
 console_scripts =
-    bids2cite = bids2cite.bids2cite:bids2cite
+    bids2cite = bids2cite.bids2cite:cli
 
 [options.extras_require]
 dev =
