--- a/setup.cfg
+++ b/setup.cfg
@@ -26,13 +26,12 @@ provides = bids2cite
 [options]
 packages = find:
 install_requires =
-    black
     crossref-commons
-    isort
     pandas
     requests
     rich
     ruamel.yaml
+    tributors
 python_requires = >=3.8
 include_package_data = True
 test_suite = pytest
@@ -68,6 +67,7 @@ style =
     flake8-docstrings>=1.5
     mypy
     pre-commit
+    reorder-python-imports
     sourcery
     types-requests
 test =
