--- a/setup.cfg
+++ b/setup.cfg
@@ -123,7 +123,7 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [tool:pytest]
-addopts = --cov bids2cite -ra -vv
+addopts = -ra -vv
 
 [coverage:run]
 branch = True
