--- a/.github/workflows/test_and_coverage.yml
+++ b/.github/workflows/test_and_coverage.yml
@@ -39,4 +39,4 @@ jobs:
         file: ./coverage.xml
         flags: tests
         name: codecov-umbrella
-        fail_ci_if_error: true
+        fail_ci_if_error: false
