--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ provides = bids2cite
 [options]
 packages = find:
 install_requires =
+    cffconvert
     crossref-commons
     pandas
     requests
@@ -109,16 +110,19 @@ warn_unused_ignores = true
 [mypy-bids2cite._version]
 ignore_errors = True
 
-[mypy-rich.*]
+[mypy-cffconvert.*]
 ignore_missing_imports = True
 
-[mypy-ruamel.*]
+[mypy-crossref_commons.*]
 ignore_missing_imports = True
 
 [mypy-pandas.*]
 ignore_missing_imports = True
 
-[mypy-crossref_commons.*]
+[mypy-rich.*]
+ignore_missing_imports = True
+
+[mypy-ruamel.*]
 ignore_missing_imports = True
 
 [tool:pytest]
