--- a/setup.cfg
+++ b/setup.cfg
@@ -135,4 +135,6 @@ omit = *_version.py
 [coverage:report]
 show_missing = True
 skip_covered = True
-omit = *_version.py
+omit =
+    *_version.py
+    __init__.py
