[DATALAD] Recorded changes

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,7 +54,7 @@ dev =
 doc =
     myst-parser
     rstcheck
-    sphinx>=2.0
+    sphinx
     sphinx-argparse
     sphinx-argparse
     sphinx-copybutton
@@ -62,17 +62,17 @@ doc =
 docs =
     %(doc)s
 style =
-    black>=21
-    flake8>=3.7
-    flake8-docstrings>=1.5
+    black
+    flake8
+    flake8-docstrings
     mypy
     pre-commit
     reorder-python-imports
     sourcery
     types-requests
 test =
-    pytest>=6.2.5
-    pytest-cov
+    coverage
+    pytest
 tests =
     %(test)s
 
