--- a/setup.cfg
+++ b/setup.cfg
@@ -99,15 +99,19 @@ per-file-ignores =
     __init__.py: D104
 
 [mypy]
+exclude = ['tests/*']
 check_untyped_defs = true
 disallow_any_generics = true
 disallow_incomplete_defs = true
-disallow_untyped_defs = true
+disallow_untyped_defs = false
 no_implicit_optional = true
 warn_redundant_casts = true
 warn_unused_ignores = true
 
 [mypy-bids2cite._version]
+ignore_errors = True
+
+[mypy-tests._version]
 ignore_errors = True
 
 [mypy-cffconvert.*]
