--- a/setup.cfg
+++ b/setup.cfg
@@ -103,7 +103,7 @@ exclude = ['tests/*']
 check_untyped_defs = true
 disallow_any_generics = true
 disallow_incomplete_defs = true
-disallow_untyped_defs = false
+disallow_untyped_defs = true
 no_implicit_optional = true
 warn_redundant_casts = true
 warn_unused_ignores = true
