switch to pyproject and hatchling

--- a/tests/data/datacite.yml
+++ b/tests/data/datacite.yml
@@ -1,3 +1,4 @@
+---
 # Metadata for DOI registration according to DataCite Metadata Schema 4.1.
 # For detailed schema description see https://doi.org/10.5438/0014
 
@@ -6,22 +7,19 @@
 # The main researchers involved. Include digital identifier (e.g., ORCID)
 # if possible, including the prefix to indicate its type.
 authors:
-  -
-    firstname: "GivenName1"
-    lastname: "FamilyName1"
-    affiliation: "Affiliation1"
-    id: "ORCID:0000-0001-2345-6789"
-  -
-    firstname: "GivenName2"
-    lastname: "FamilyName2"
-    affiliation: "Affiliation2"
-    id: "ResearcherID:X-1234-5678"
-  -
-    firstname: "GivenName3"
-    lastname: "FamilyName3"
+-   firstname: GivenName1
+    lastname: FamilyName1
+    affiliation: Affiliation1
+    id: ORCID:0000-0001-2345-6789
+-   firstname: GivenName2
+    lastname: FamilyName2
+    affiliation: Affiliation2
+    id: ResearcherID:X-1234-5678
+-   firstname: GivenName3
+    lastname: FamilyName3
 
 # A title to describe the published resource.
-title: "Example Title"
+title: Example Title
 
 # Additional information about the resource, e.g., a brief abstract.
 description: Example description.
@@ -29,15 +27,15 @@ description: Example description.
 # Lit of keywords the resource should be associated with.
 # Give as many keywords as possible, to make the resource findable.
 keywords:
-  - Neuroscience
-  - Keyword2
-  - Keyword3
+-   Neuroscience
+-   Keyword2
+-   Keyword3
 
 # License information for this resource. Please provide the license name and/or a link to the license.
 # Please add also a corresponding LICENSE file to the repository.
 license:
-  name: "Creative Commons CC0 1.0 Public Domain Dedication"
-  url: "https://creativecommons.org/publicdomain/zero/1.0/"
+    name: Creative Commons CC0 1.0 Public Domain Dedication
+    url: https://creativecommons.org/publicdomain/zero/1.0/
 
 
 
@@ -46,8 +44,8 @@ license:
 # Funding information for this resource.
 # Separate funder name and grant number by comma.
 funding:
-  - "DFG, AB1234/5-6"
-  - "EU, EU.12345"
+-   DFG, AB1234/5-6
+-   EU, EU.12345
 
 
 # Related publications. reftype might be: IsSupplementTo, IsDescribedBy, IsReferencedBy.
@@ -56,18 +54,15 @@ funding:
 # Supported sources are: DOI, arXiv, PMID
 # In the citation field, please provide the full reference, including title, authors, journal etc.
 references:
-  -
-    id: "doi:10.xxx/zzzz"
-    reftype: "IsSupplementTo"
-    citation: "Citation1"
-  -
-    id: "arxiv:mmmm.nnnn"
-    reftype: "IsSupplementTo"
-    citation: "Citation2"
-  -
-    id: "pmid:nnnnnnnn"
-    reftype: "IsReferencedBy"
-    citation: "Citation3"
+-   id: doi:10.xxx/zzzz
+    reftype: IsSupplementTo
+    citation: Citation1
+-   id: arxiv:mmmm.nnnn
+    reftype: IsSupplementTo
+    citation: Citation2
+-   id: pmid:nnnnnnnn
+    reftype: IsReferencedBy
+    citation: Citation3
 
 
 # Resource type. Default is Dataset, other possible values are Software, DataPaper, Image, Text.
