--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,3 +1,4 @@
+---
 name: Bug report
 
 # See the json schema to help you create / update this form
@@ -5,93 +6,90 @@ name: Bug report
 
 description: Fill in this template to report a bug
 
-title: "[BUG]"
+title: '[BUG]'
 
-labels: ["bug :bug:"]
+labels: ['bug :bug:']
 
 body:
 
-  - type: markdown
+-   type: markdown
     attributes:
-      value: |
-        Thanks for taking the time to fill out this bug report!
+        value: |
+            Thanks for taking the time to fill out this bug report!
 
-        To maximize chances for a quick fix make sure you know
-        [How to Report Bugs Effectively](https://www.chiark.greenend.org.uk/~sgtatham/bugs.html)
+            To maximize chances for a quick fix make sure you know
+            [How to Report Bugs Effectively](https://www.chiark.greenend.org.uk/~sgtatham/bugs.html)
 
-  - type: checkboxes
+-   type: checkboxes
     attributes:
-      label: Is there an existing issue for this?
-      description:
-        Please search to see if an issue already exists for the bug you
-        encountered.
-      options:
-        - label: I have searched the existing issues
-          required: true
+        label: Is there an existing issue for this?
+        description: Please search to see if an issue already exists for the bug you encountered.
+        options:
+        -   label: I have searched the existing issues
+            required: true
 
-  - type: checkboxes
+-   type: checkboxes
     attributes:
-      label: Operating system
-      description:
-        What operating system are you using?
-      options:
-        - label: Linux
-        - label: Mac
-        - label: Windows
+        label: Operating system
+        description: What operating system are you using?
+        options:
+        -   label: Linux
+        -   label: Mac
+        -   label: Windows
 
-  - type: textarea
+-   type: textarea
     attributes:
-      label: Operating system version
-      render: markdown
-      value: |
-        - Linux Ubuntu 18.04 "bionic beaver"
-        - Mac OS Version 12 "monterey"
+        label: Operating system version
+        render: markdown
+        value: |
+            - Linux Ubuntu 18.04 "bionic beaver"
+            - Mac OS Version 12 "monterey"
     validations:
-      required: true
+        required: true
 
-  - type: textarea
+-   type: textarea
     attributes:
-      label: bids2cite version
-      description: |
-        In the command line, try:
-          - `bids2cite --version`
+        label: bids2cite version
+        description: |
+            In the command line, try:
+              - `bids2cite --version`
     validations:
-      required: true
+        required: true
 
-  - type: textarea
+-   type: textarea
     attributes:
-      label: Expected Behavior
-      description: Describe what outcome you expected.
-      placeholder: Describe what outcome you expected.
+        label: Expected Behavior
+        description: Describe what outcome you expected.
+        placeholder: Describe what outcome you expected.
     validations:
-      required: false
+        required: false
 
-  - type: textarea
+-   type: textarea
     attributes:
-      label: Current Behavior
-      description: Describe what you got instead.
-      placeholder: Describe what you got instead
+        label: Current Behavior
+        description: Describe what you got instead.
+        placeholder: Describe what you got instead
     validations:
-      required: true
+        required: true
 
-  - type: textarea
+-   type: textarea
     attributes:
-      label: Error message
-      description: If possible paste below the error message you encountered.
+        label: Error message
+        description: If possible paste below the error message you encountered.
     validations:
-      required: false
-      value: |
-        ```matlab
-        % this is the error I got
+        required: false
+        value: |
+            ```matlab
+            % this is the error I got
 
-        ```
+            ```
 
-  - type: textarea
+-   type: textarea
     attributes:
-      label: Anything else?
-      description: |
-        Links? References? Anything that will give us more context about the issue you are encountering!
+        label: Anything else?
+        description: |
+            Links? References? Anything that will give us more context about the issue you are encountering!
 
-        Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
+            Tip: You can attach images or log files by clicking this area to highlight it and then dragging files in.
     validations:
-      required: false
+        required: false
