--- a/.github/workflows/test_and_coverage.yml
+++ b/.github/workflows/test_and_coverage.yml
@@ -1,45 +1,46 @@
+---
 name: Test and coverage
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ "*" ]
+    push:
+        branches: [main]
+    pull_request:
+        branches: ['*']
 
 jobs:
-  test_and_coverage:
+    test_and_coverage:
 
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11']
+        runs-on: ${{ matrix.os }}
+        strategy:
+            matrix:
+                os: [macos-latest, ubuntu-latest, windows-latest]
+                python-version: ['3.8', '3.9', '3.10', '3.11']
 
-    steps:
+        steps:
 
-    - name: Clone repo
-      uses: actions/checkout@v3
+        -   name: Clone repo
+            uses: actions/checkout@v3
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
-      with:
-        python-version: ${{ matrix.python-version }}
+        -   name: Set up Python ${{ matrix.python-version }}
+            uses: actions/setup-python@v4
+            with:
+                python-version: ${{ matrix.python-version }}
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip setuptools
-        pip install .[test]
+        -   name: Install dependencies
+            run: |
+                python -m pip install --upgrade pip setuptools
+                pip install .[test]
 
-    - name: Run tests and generate coverage report
-      run: |
-        coverage erase
-        coverage run --source bids2cite -m pytest
-        coverage xml
+        -   name: Run tests and generate coverage report
+            run: |
+                coverage erase
+                coverage run --source bids2cite -m pytest
+                coverage xml
 
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        file: ./coverage.xml
-        flags: tests
-        name: codecov-umbrella
-        fail_ci_if_error: false
+        -   name: Upload coverage to Codecov
+            uses: codecov/codecov-action@v3
+            with:
+                file: ./coverage.xml
+                flags: tests
+                name: codecov-umbrella
+                fail_ci_if_error: false
