--- a/.github/workflows/validate_cff.yml
+++ b/.github/workflows/validate_cff.yml
@@ -1,22 +1,23 @@
+---
 name: validate CITATION.cff
 
 on:
-  push:
-    branches: ['*']
-  pull_request:
-    branches: ['*']
+    push:
+        branches: ['*']
+    pull_request:
+        branches: ['*']
 
 jobs:
 
-  validate_cff:
+    validate_cff:
 
-    runs-on: ubuntu-latest
+        runs-on: ubuntu-latest
 
-    steps:
+        steps:
 
-    - uses: actions/checkout@v3
+        -   uses: actions/checkout@v3
 
-    - name: Check whether the citation metadata from CITATION.cff is valid
-      uses: citation-file-format/cffconvert-github-action@2.0.0
-      with:
-        args: "--validate"
+        -   name: Check whether the citation metadata from CITATION.cff is valid
+            uses: citation-file-format/cffconvert-github-action@2.0.0
+            with:
+                args: --validate
