--- a/.github/workflows/test_and_coverage.yml
+++ b/.github/workflows/test_and_coverage.yml
@@ -15,6 +15,7 @@ jobs:
             matrix:
                 os: [macos-latest, ubuntu-latest, windows-latest]
                 python-version: ['3.8', '3.9', '3.10', '3.11']
+            fail-fast: false
 
         steps:
 
@@ -28,7 +29,7 @@ jobs:
 
         -   name: Install dependencies
             run: |
-                python -m pip install --upgrade pip setuptools
+                python -m pip install --upgrade pip
                 pip install .[test]
 
         -   name: Run tests and generate coverage report
