--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,58 +1,68 @@
+---
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
 
 repos:
-    - repo: https://github.com/pre-commit/pre-commit-hooks
-      rev: "v4.4.0"
-      hooks:
-          - id: trailing-whitespace
-          - id: check-yaml
-          - id: end-of-file-fixer
-          - id: check-json
-          - id: debug-statements
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v4.4.0
+    hooks:
+    -   id: check-ast
+    -   id: check-case-conflict
+    -   id: check-json
+    -   id: check-merge-conflict
+    -   id: check-yaml
+    -   id: end-of-file-fixer
+    -   id: trailing-whitespace
 
-    - repo: https://github.com/psf/black
-      rev: "23.7.0"
-      hooks:
-          - id: black
+-   repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
+    rev: 0.2.3
+    hooks:
+    -   id: yamlfmt
+        args: [--mapping, '4', --sequence, '4', --offset, '0']
 
-    - repo: https://github.com/pycqa/flake8
-      rev: "6.1.0"
-      hooks:
-      -   id: flake8
-          exclude: tests_.*.py|version.*.py|setup.py
+-   repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
+    rev: v2.10.0
+    hooks:
+    -   id: pretty-format-toml
+        args: [--autofix, --indent, '4']
 
-    - repo: https://github.com/ikamensh/flynt/
-      rev: "1.0.1"
-      hooks:
-          - id: flynt
+-   repo: https://github.com/asottile/reorder-python-imports
+    rev: v3.10.0
+    hooks:
+    -   id: reorder-python-imports
+        args: [--py37-plus, --add-import, from __future__ import annotations]
 
-    - repo: https://github.com/asottile/reorder-python-imports
-      rev: "v3.10.0"
-      hooks:
-          - id: reorder-python-imports
-            args: [--py38-plus, --add-import, 'from __future__ import annotations']
 
-    -   repo: https://github.com/asottile/setup-cfg-fmt
-        rev: v2.4.0
-        hooks:
-        -   id: setup-cfg-fmt
+-   repo: https://github.com/asottile/pyupgrade
+    rev: v3.10.1
+    hooks:
+    -   id: pyupgrade
+        args: [--py38-plus]
 
-    -   repo: https://github.com/pre-commit/mirrors-mypy
-        rev: 'v1.5.1'
-        hooks:
-        -   id: mypy
-            additional_dependencies: [types-all]
-            files: bids2cite
-            args: ["--config-file", "setup.cfg"]
+-   repo: https://github.com/psf/black
+    rev: 23.7.0
+    hooks:
+    -   id: black
+        args: [--verbose, --config=pyproject.toml]
 
-    -   repo: https://github.com/asottile/pyupgrade
-        rev: v3.10.1
-        hooks:
-        -   id: pyupgrade
-            args: [--py38-plus]
+-   repo: https://github.com/codespell-project/codespell
+    rev: v2.2.5
+    hooks:
+    -   id: codespell
+        args: [--toml=pyproject.toml]
+        additional_dependencies: [tomli]
 
-    -   repo: https://github.com/MarcoGorelli/auto-walrus
-        rev: v0.2.2
-        hooks:
-        -   id: auto-walrus
+-   repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.5.1
+    hooks:
+    -   id: mypy
+        additional_dependencies: [types-all, pandas-stubs]
+        args: [--config-file=pyproject.toml]
+
+
+-   repo: https://github.com/pyCQA/flake8
+    rev: 6.1.0
+    hooks:
+    -   id: flake8
+        args: [--config, .flake8, --verbose]
+        additional_dependencies: [flake8-docstrings, flake8-use-fstring, flake8-functions]
