--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,8 @@
 ---
 # See https://pre-commit.com for more information
 # See https://pre-commit.com/hooks.html for more hooks
+ci:
+    autoupdate_commit_msg: 'chore: update pre-commit hooks'
 
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
@@ -10,8 +12,10 @@ repos:
     -   id: check-case-conflict
     -   id: check-json
     -   id: check-merge-conflict
+    -   id: check-toml
     -   id: check-yaml
     -   id: end-of-file-fixer
+    -   id: mixed-line-ending
     -   id: trailing-whitespace
 
 -   repo: https://github.com/jumanjihouse/pre-commit-hook-yamlfmt
@@ -25,24 +29,6 @@ repos:
     hooks:
     -   id: pretty-format-toml
         args: [--autofix, --indent, '4']
-
--   repo: https://github.com/pycqa/isort
-    rev: 5.13.2
-    hooks:
-    -   id: isort
-        args: [--profile, black, --settings-path, pyproject.toml]
-
--   repo: https://github.com/asottile/pyupgrade
-    rev: v3.17.0
-    hooks:
-    -   id: pyupgrade
-        args: [--py39-plus]
-
--   repo: https://github.com/psf/black
-    rev: 24.10.0
-    hooks:
-    -   id: black
-        args: [--verbose, --config=pyproject.toml]
 
 -   repo: https://github.com/codespell-project/codespell
     rev: v2.3.0
@@ -58,10 +44,12 @@ repos:
         additional_dependencies: [pandas-stubs, types-requests]
         args: [--config-file=pyproject.toml]
 
-
--   repo: https://github.com/pyCQA/flake8
-    rev: 7.1.1
+-   repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.6.9
     hooks:
-    -   id: flake8
-        args: [--config, .flake8, --verbose]
-        additional_dependencies: [flake8-docstrings, flake8-use-fstring, flake8-functions]
+    # Run the linter.
+    -   id: ruff
+        # args: [--statistics]
+        args: [--fix, --show-fixes]
+    # Run the formatter.
+    -   id: ruff-format
