--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,13 +46,13 @@ dev = [
 doc = [
     "myst-parser",
     "rstcheck",
-    "sphinx",
+    "sphinx>7",
     "sphinx-argparse",
     "sphinx-copybutton",
     "sphinx-rtd-theme"
 ]
 docs = ["bids2cite[doc]"]
-test = ["pytest", "pytest-cov", "coverage"]
+test = ["pytest>=7", "pytest-cov", "coverage"]
 tests = ["bids2cite[test]"]
 
 [project.scripts]
@@ -60,9 +60,6 @@ bids2cite = "bids2cite.bids2cite:_cli"
 
 [project.urls]
 Homepage = "https://github.com/Remi-Gau/bids2cite"
-
-[tool.black]
-line-length = 90
 
 [tool.codespell]
 builtin = "clear,rare"
@@ -77,19 +74,16 @@ packages = ["bids2cite"]
 [tool.hatch.version]
 source = "vcs"
 
-[tool.isort]
-combine_as_imports = true
-line_length = 90
-profile = "black"
-skip_gitignore = true
-
 [tool.mypy]
 check_untyped_defs = true
 disallow_any_generics = true
 disallow_incomplete_defs = true
 disallow_untyped_defs = true
+enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
 no_implicit_optional = true
+strict = true
 warn_redundant_casts = true
+warn_unreachable = true
 warn_unused_ignores = true
 
 [[tool.mypy.overrides]]
@@ -112,6 +106,67 @@ module = [
 ]
 
 [tool.pytest.ini_options]
-addopts = "-ra -q -vv --cov bids2cite "
+addopts = "-ra -q -vv --cov bids2cite --strict-config --strict-markers"
+filterwarnings = ["error"]
+log_cli_level = "INFO"
+minversion = "7"
 norecursedirs = "data"
 testpaths = ["tests/"]
+xfail_strict = true
+
+[tool.ruff]
+extend-exclude = []
+include = ["pyproject.toml", "bids2cite/**/*.py", "test/**/*.py"]
+indent-width = 4
+line-length = 90
+
+[tool.ruff.format]
+docstring-code-format = true
+docstring-code-line-length = "dynamic"
+indent-style = "space"
+line-ending = "auto"
+quote-style = "double"
+skip-magic-trailing-comma = false
+
+[tool.ruff.lint]
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+fixable = ["ALL"]
+ignore = [
+    "PLR0913",
+    "PLR0915"
+]
+# List of all the ruff rules (includes why the rule matters)
+# https://docs.astral.sh/ruff/rules/
+select = [
+    "ARG",
+    "B",
+    "C4",
+    "C90",
+    "D",
+    "DOC",
+    "E",
+    "ERA",
+    "F",
+    "FLY",
+    "I",
+    "N",
+    "NPY",
+    "PERF",
+    "PTH",
+    "PD",
+    "PLR",
+    "RUF",
+    "SIM",
+    "UP",
+    "W"
+]
+unfixable = []
+
+[tool.ruff.lint.mccabe]
+max-complexity = 41
+
+[tool.ruff.lint.per-file-ignores]
+"**/{tests}/*" = ["D100", "D103", "D104", "PLR0913"]
+
+[tool.ruff.lint.pydocstyle]
+convention = "numpy"
